--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false, // This config remote "--isolatedModules flag issue
     "noEmit": true,
     "jsx": "react-jsx"
   },
